# fimfic-tracker

./: Cargo.toml  README.md
cli/: Cargo.toml  build.rs
cli/src/: args.rs  error.rs  listener.rs  logger.rs  macros.rs  main.rs  readable.rs
cli/src/subcommands/: download.rs  list.rs  mod.rs  track.rs  untrack.rs
completions/: _fimfic-tracker  _fimfic-tracker.ps1  fimfic-tracker.bash  fimfic-tracker.elv  fimfic-tracker.fish
core/: Cargo.toml
core/config/: default.toml  test-config.toml
core/src/: errors.rs  lib.rs  story.rs  utils.rs
core/src/api/: mod.rs  rating.rs  status.rs  vote.rs
core/src/config/: format.rs  mod.rs  sensibility.rs
core/src/downloader/: blocking.rs  listener.rs  mod.rs  sync.rs
core/tests/: download-story.rs
xtask/: Cargo.toml
xtask/src/: args.rs  main.rs
