[package]
name = "fimfic-tracker-cli"
version = "0.1.0"
authors = ["ZodiacalComet <ZodiacalComet@gmail.com>"]
description = "An unnecessary CLI application for tracking Fimfiction stories."
license = "Unlicense"
edition = "2021"

build = "build.rs"

[[bin]]
name = "fimfic-tracker"
path = "src/main.rs"
doc = false

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[dependencies.fimfic-tracker]
path = "../core"
version = "0.1"
features = ["downloader"]

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
console = "0.15"
dialoguer = "0.10"
chrono = "0.4"
number_prefix = "0.4"
chrono-humanize = "0.2"

log = "0.4"
env_logger = "0.10"
