[package]
name = "fimfic-tracker"
version = "0.1.0"
authors = ["ZodiacalComet <ZodiacalComet@gmail.com>"]
description = "Provides all of the non interface specific code used for fimfic-tracker."
license = "Unlicense"
edition = "2021"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempdir = "0.3"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
toml = { version = "0.7", default-features = false, features = ["parse"] }
envy = "0.4"
directories = "5"
lazy_static = "1.4"
shellexpand = "3.0.0"
url = "2.2"
indexmap = "1.5"
tokio = { version = "1", features = ["fs"] }

futures-util = { version = "0.3", features = ["io"], optional = true }
reqwest = { version = "0.11", features = ["stream"], optional = true }
shlex = { version = "1.1", optional = true }

[dependencies.fimfiction-api]
git = "https://github.com/ZodiacalComet/deserialize-fimfic-api.git"
rev = "942b70a"
features = ["chrono"]

[features]
default = []
downloader = ["reqwest", "shlex", "futures-util", "tokio/process", "tokio/io-util", "tokio/rt-multi-thread"]

[[test]]
name = "download-story"
path = "tests/download-story.rs"
required-features = ["downloader"]
